[package]
name = "realsense-tools-rs"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enumerate-devices"
path = "src/enumerate_devices.rs"

[[bin]]
name = "realsense-viewer"
path = "src/realsense_viewer.rs"

[[bin]]
name = "realsense-3d-viewer"
path = "src/realsense_3d_viewer.rs"

[dependencies]
anyhow = "1.0.95"
eframe = "0.31.0"
env_logger = "0.11.6"
image = "0.25.5"
realsense-rust = "1.2.3"
